tests/typing/bad/testfile-undefined-3.go
package main

func main() { t := new(T) }
